force-app/main/default/objects/Case_AI_Classified__e/Case_AI_Classified__e.object-meta.xml
<CustomObject>
    <description>Fires when AI has finished classifying a Case. LWCs subscribe via empApi for real-time agent console updates.</description>
    <label>Case AI Classified</label>
    <pluralLabel>Case AI Classified Events</pluralLabel>
</CustomObject>