force-app/main/default/objects/Case_AI_Classified__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Salesforce Id of the Case that was classified</description>
    <label>Case Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>