force-app/main/default/objects/Case_AI_Classified__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>AI-classified category (matches Case.AI_Category__c)</description>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>