force-app/main/default/objects/Case_AI_Classified__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if Status = Failed (truncated to 255 chars)</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>