force-app/main/default/objects/Case_AI_Classified__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>AI-classified priority (matches Case.AI_Priority__c)</description>
    <label>Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>