force-app/main/default/objects/Case_AI_Classified__e/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>AI-detected sentiment (matches Case.AI_Sentiment__c)</description>
    <label>Sentiment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>