force-app/main/default/objects/Case_AI_Classified__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Success or Failed</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>